--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="poster_image">Poster Image</string>
+    <string name="background_image">Background Image</string>
+    <string name="filter">Filter</string>
+    <string name="all">All</string>
+    <string name="top_rated">Top Rated</string>
+    <string name="popular">Popular</string>
+    <string name="synopsis">Synopsis:</string>
 </resources>
