--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="poster_image">Poster Image</string>
     <string name="background_image">Background Image</string>
     <string name="filter">Filter</string>
-    <string name="all">All</string>
+    <string name="now_playing">Now Playing</string>
     <string name="top_rated">Top Rated</string>
     <string name="popular">Popular</string>
     <string name="favourite">Favourite</string>
