--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Bake It</string>
     <string name="servings">Servings: %d</string>
     <string name="ingredient">:  %s</string>
+    <string name="step">%d : %s</string>
 </resources>
