navigation, fixes, persistance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="ingredient">:  %s</string>
     <string name="step">%d : %s</string>
     <string name="step_number">Step %d</string>
+    <string name="step_nav_state">%d / %d</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
