--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="servings">Servings: %d</string>
     <string name="ingredient">:  %s</string>
     <string name="step">%d : %s</string>
-    <string name="step_number">Step %d</string>
     <string name="step_nav_state">%d / %d</string>
+    <string name="ingredientsLabel">Ingredients :</string>
+    <string name="stepsLabel">Steps :</string>
 
 </resources>
